inyokaedit (0.0.5~ppa1) natty; urgency=low

  * Changed save folder of settings file

  * File dialogs open last used folder

  * Replaced CDownloadArticle with simple wget call

  * Bigger application icon

  * Reporting bugs via apport

  * Added missing interwiki links

 -- Thorsten Roth <elthoro@gmx.de>  Sun, 23 Oct 2011 20:37:44 +0200

inyokaedit (0.0.4~ppa1) natty; urgency=low

  * Added option to download images of articles (Closes: #847258)

  * Minor changes (exception handling, using wget for metadata download)

 -- Thorsten Roth <elthoro@gmx.de>  Wed, 19 Oct 2011 19:47:23 +0200

inyokaedit (0.0.3~ppa2) natty; urgency=low

  * Bug fix: Preview was stored in wrong folder /home/user/Documents, fixed to /home/user/.InyokaEdit

 -- Thorsten Roth <elthoro@gmx.de>  Mon, 19 Aug 2011 21:13:36 +0200

inyokaedit (0.0.3~ppa1) natty; urgency=low

  * Another try to realize Open with...

  * File dialog opens home directory

  * Show download progress at first startup

 -- Thorsten Roth <elthoro@gmx.de>  Sun, 18 Aug 2011 22:25:04 +0200

inyokaedit (0.0.2~ppa1) natty; urgency=low

  * CHANGELOG: Used changelog file ;-)

  * main.cpp, CInyokaEdit.cpp: Open file from command line argument

  * CInyokaEdit.cpp: Updated about dialog

 -- Thorsten Roth <elthoro@gmx.de>  Mon, 15 Aug 2011 22:25:04 +0200

inyokaedit (0.0.1~ppa2) maverick; urgency=low

  * Initial release

 -- Martin Rabeneck <martinrabeneck@gmx.net>  Mon, 06 Jun 2011 13:36:06 +0200