@@ -12,6 +12,8 @@ inyokaedit (0.0.5~ppa1) natty; urgency=low
 
   * Added missing interwiki links
 
+  * Save and restore toolbar positions
+
  -- Thorsten Roth <elthoro@gmx.de>  Sun, 23 Oct 2011 20:37:44 +0200
 
 inyokaedit (0.0.4~ppa1) natty; urgency=low
